-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.4
-
1a0b4b9f26e16532cc3d5532e25d886426ce994e
Configure Qt build to disable http feature using qconfig-gui or giving option -no-feature-http causes build failure.
| For Gerrit Dashboard: QTBUG-66606 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 221019,4 | Modernize use of 'http' feature | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 221226,3 | Fix build failure when feature http is disabled | 5.9 | qt/qtbase | Status: ABANDONED | 0 | 0 |