Modernize use of 'http' feature

Exclude QHttp(Multi)Part from being built if http is disabled, and
replace the exclusion macros. Use the qmake project files to exclude
source files, and QT_REQUIRE_CONFIG(http) in headers.

Task-number: QTBUG-66606
Change-Id: I432fa3c78aa97b5ed2eb1027ac1dc3bdb134f9ba
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@qt.io>
(cherry picked from commit 1a0b4b9f26e16532cc3d5532e25d886426ce994e)
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>