src/network/access/qnetworkaccessmanager_p.h
@@ -163,7 +163,9 @@ public:
 
 #endif
 
+#if QT_CONFIG(http)
     QNetworkRequest prepareMultipart(const QNetworkRequest &request, QHttpMultiPart *multiPart);
+#endif
 
     // this is the cache for storing downloaded files
     QAbstractNetworkCache *networkCache;
