src/network/access/qnetworkreplyhttpimpl_p.h
@@ -71,7 +71,7 @@
 #include <QtNetwork/QSslConfiguration>
 #endif
 
-#ifndef QT_NO_HTTP
+QT_REQUIRE_CONFIG(http);
 
 QT_BEGIN_NAMESPACE
 
@@ -313,7 +313,5 @@ public:
 };
 
 QT_END_NAMESPACE
-
-#endif // QT_NO_HTTP
 
 #endif
